SERVER-55017 fix iassert(...) and tassert(...) argument evaluation