src/mongo/platform/source_location.h
@@ -84,8 +84,7 @@ private:
  */
 class SourceLocationHolder {
 public:
-    constexpr SourceLocationHolder(SourceLocation&& loc) noexcept
-        : _loc(std::forward<SourceLocation>(loc)) {}
+    constexpr SourceLocationHolder(SourceLocation loc) noexcept : _loc(std::move(loc)) {}
 
     constexpr uint_least32_t line() const noexcept {
         return _loc.line();
